--- a/androidsvg/build.gradle
+++ b/androidsvg/build.gradle
@@ -14,6 +14,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+    
+    test {
+        exclude '**/*'
+    }
 
     dependencies {
         testCompile 'junit:junit:4.12'
